--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "lint": "turbo lnt",
+    "lint:fix": "turbo lnt:fix",
+    "format": "turbo fmt",
+    "format:fix": "turbo fmt:fix",
+    "typecheck": "turbo typecheck"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
-    "tsconfig": "workspace:*",
     "turbo": "latest"
   },
   "packageManager": "pnpm@8.6.10",
+  "pnpm": {
+    "overrides": {
+      "@repo/tsconfig": "link:./tooling/typescript-config",
+      "@repo/lint": "link:./tooling/eslint-config",
+      "@repo/ui": "link:./packages/ui"
+    }
+  },
   "name": "pnpm-cache-turborepo"
 }
