--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,21 +1,40 @@
 {
-  "name": "ui",
+  "name": "@repo/ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
   "license": "MIT",
+  "exports": {
+    ".": "./src/index.ts",
+    "./icons": "./src/icons.ts",
+    "./components/*": "./src/components/*"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./src/index.ts"
+      ],
+      "icons": [
+        "./src/icons.ts"
+      ],
+      "components/*": [
+        "./src/components/*"
+      ]
+    }
+  },
   "scripts": {
-    "lint": "eslint .",
-    "generate:component": "turbo gen react-component"
+    "fmt": "prettier . --check --cache --cache-location=\"node_modules/.cache/prettiercache\"",
+    "fmt:fix": "prettier . --write --cache --cache-location=\"node_modules/.cache/prettiercache\" --log-level=warn",
+    "lnt": "eslint . --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
+    "lnt:fix": "eslint . --fix --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@turbo/gen": "^1.10.12",
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "eslint-config-custom": "workspace:*",
+    "eslint": "^8.48.0",
+    "@repo/lint": "0.0.0",
+    "@repo/tsconfig": "0.0.0",
     "react": "^18.2.0",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.5.2"
+    "typescript": "^5.2.2"
   }
 }
