--- a/packages/compiled/package.json
+++ b/packages/compiled/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "@repo/ui",
+  "name": "@repo/compiled",
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "exports": {
-    ".": "./src/index.ts",
-    "./icons": "./src/icons.ts",
-    "./components/*": "./src/components/*"
+    ".": "./dist/index.js"
   },
   "typesVersions": {
     "*": {
       "*": [
-        "./src/index.ts"
-      ],
-      "icons": [
-        "./src/icons.ts"
-      ],
-      "components/*": [
-        "./src/components/*"
+        "./dist/index.d.ts"
       ]
     }
   },
   "scripts": {
+    "build": "tsup",
     "format": "prettier . --check --cache --cache-location=\"node_modules/.cache/prettiercache\"",
     "format:fix": "prettier . --write --cache --cache-location=\"node_modules/.cache/prettiercache\" --log-level=warn",
     "lint": "eslint . --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
     "lint:fix": "eslint . --fix --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf node_modules dist .turbo"
   },
   "devDependencies": {
+    "tsup": "^7.2.0",
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
