--- a/packages/just-in-time/package.json
+++ b/packages/just-in-time/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "web",
-  "version": "1.0.0",
+  "name": "@repo/just-in-time",
+  "version": "0.0.0",
   "private": true,
+  "license": "MIT",
+  "exports": {
+    ".": "./src/index.ts"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./src/index.ts"
+      ]
+    }
+  },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
     "format": "prettier . --check --cache --cache-location=\"node_modules/.cache/prettiercache\"",
     "format:fix": "prettier . --write --cache --cache-location=\"node_modules/.cache/prettiercache\" --log-level=warn",
     "lint": "eslint . --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
     "lint:fix": "eslint . --fix --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
     "typecheck": "tsc --noEmit",
-    "clean": "rm -rf node_modules .turbo .next"
-  },
-  "dependencies": {
-    "next": "^13.4.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@repo/just-in-time": "0.0.0",
-    "@repo/compiled": "0.0.0"
+    "clean": "rm -rf node_modules .turbo"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.19",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
+    "@types/node": "^20.5.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "eslint": "^8.48.0",
     "@repo/lint": "0.0.0",
     "@repo/tsconfig": "0.0.0",
+    "react": "^18.2.0",
     "typescript": "^5.2.2"
   }
 }
