--- a/packages/transpiled/package.json
+++ b/packages/transpiled/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "@repo/compiled",
+  "name": "@repo/transpiled",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./bindings/index.ts"
   },
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/index.d.ts"
+        "./bindings/index.ts"
       ]
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "cargo build",
+    "bindings": "cross test --target x86_64-pc-windows-gnu && sh ./bindings.sh",
     "format": "prettier . --check --cache --cache-location=\"node_modules/.cache/prettiercache\"",
     "format:fix": "prettier . --write --cache --cache-location=\"node_modules/.cache/prettiercache\" --log-level=warn",
     "lint": "eslint . --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
     "lint:fix": "eslint . --fix --cache --cache-location \"node_modules/.cache/.eslintcache\" --max-warnings 0",
     "typecheck": "tsc --noEmit",
-    "clean": "rm -rf node_modules dist .turbo"
+    "clean": "rm -rf node_modules .turbo target .cargo"
   },
   "devDependencies": {
-    "tsup": "^7.2.0",
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
